--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="plus"
+            android:onClick="onButtonPlusClick"
             android:layout_weight="1"
             android:text="+"
             android:textSize="50dp"
@@ -43,7 +43,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            android:onClick="minus"
+            android:onClick="onButtonMinusClick"
             android:text="-"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
 
-            android:onClick="multip"
+            android:onClick="onButtonMultipClick"
             android:layout_height="match_parent"
             android:text="*"
             android:textSize="50dp"
@@ -62,7 +62,7 @@
             android:layout_weight="1"
 
             android:layout_height="match_parent"
-            android:onClick="division"
+            android:onClick="onButtonDivisionClick"
             android:text="/"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -81,7 +81,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="One"
+            android:onClick="onButtonOneClick"
             android:layout_weight="1"
             android:text="1"
             android:textSize="50dp"
@@ -92,7 +92,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            android:onClick="Two"
+            android:onClick="onButtonTwoClick"
             android:text="2"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -101,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
 
-            android:onClick="Three"
+            android:onClick="onButtonThreeClick"
             android:layout_height="match_parent"
             android:text="3"
             android:textSize="50dp"
@@ -121,7 +121,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:onClick="Four"
+            android:onClick="onButtonFourClick"
             android:layout_weight="1"
             android:text="4"
             android:textSize="50dp"
@@ -132,7 +132,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            android:onClick="Five"
+            android:onClick="onButtonFiveClick"
             android:text="5"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -143,7 +143,7 @@
             android:layout_weight="1"
 
             android:layout_height="match_parent"
-            android:onClick="Six"
+            android:onClick="onButtonSixClick"
             android:text="6"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -162,7 +162,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            android:onClick="Seven"
+            android:onClick="onButtonSevenClick"
             android:text="7"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -171,7 +171,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
 
-            android:onClick="Eight"
+            android:onClick="onButtonEightClick"
             android:layout_height="match_parent"
             android:text="8"
             android:textSize="50dp"
@@ -181,7 +181,7 @@
             android:layout_weight="1"
 
             android:layout_height="match_parent"
-            android:onClick="Nine"
+            android:onClick="onButtonNineClick"
             android:text="9"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -201,7 +201,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            android:onClick="Zero"
+            android:onClick="onButtonZeroClick"
             android:text="0"
             android:textSize="50dp"
             android:textStyle="bold"/>
@@ -210,7 +210,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
 
-            android:onClick="ClearC"
+            android:onClick="onButtonClearCClick"
             android:layout_height="match_parent"
             android:text="C"
             android:textSize="50dp"
@@ -220,7 +220,7 @@
             android:layout_weight="1"
 
             android:layout_height="match_parent"
-            android:onClick="Equal"
+            android:onClick="onButtonEqualClick"
             android:text="="
             android:textSize="50dp"
             android:textStyle="bold"/>
