--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,36 +11,33 @@
     <TextView
         android:id="@+id/Equationview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:layout_weight="0.8"
+        android:layout_weight="5"
         android:gravity="bottom|right"
         android:text=""
         android:textSize="50dp"
         android:textColor="#f7f6cb"
         />
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal"
         >
-
-
-
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="onButtonPlusClick"
             android:layout_weight="1"
-            android:text="+"
+
+            android:onClick="onButtonModClick"
+            android:text="%"
             android:textSize="50dp"
             android:textStyle="bold"/>
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
 
@@ -49,7 +47,7 @@
             android:textStyle="bold"/>
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_weight="1"
 
             android:onClick="onButtonMultipClick"
@@ -58,9 +56,8 @@
             android:textSize="50dp"
             android:textStyle="bold"/>
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_weight="1"
-
             android:layout_height="match_parent"
             android:onClick="onButtonDivisionClick"
             android:text="/"
@@ -71,163 +68,200 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal"
         >
-
-
-
-        <Button
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="onButtonOneClick"
-            android:layout_weight="1"
-            android:text="1"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
+            android:layout_weight="3"
+            android:orientation="vertical">
 
-        <Button
-            android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+
+                    android:onClick="onButtonSevenClick"
+                    android:text="7"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+
+                    android:onClick="onButtonEightClick"
+                    android:text="8"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonNineClick"
+                    android:text="9"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonFourClick"
+                    android:text="4"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonFiveClick"
+                    android:text="5"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonSixClick"
+                    android:text="6"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1">
 
-            android:onClick="onButtonTwoClick"
-            android:text="2"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-
-            android:onClick="onButtonThreeClick"
-            android:layout_height="match_parent"
-            android:text="3"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="onButtonPlusClick"
+                android:text="+"
+                android:textSize="50dp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal"
         >
-
-
-
-        <Button
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="onButtonFourClick"
-            android:layout_weight="1"
-            android:text="4"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
+            android:layout_weight="3"
+            android:orientation="vertical">
 
-        <Button
-            android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                >
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonOneClick"
+                    android:text="1"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+
+                    android:onClick="onButtonTwoClick"
+                    android:text="2"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+
+                    android:onClick="onButtonThreeClick"
+                    android:text="3"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                >
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonClearCClick"
+                    android:text="C"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonZeroClick"
+                    android:text="0"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="onButtonDotClick"
+                    android:text="."
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
 
-            android:onClick="onButtonFiveClick"
-            android:text="5"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-
-            android:layout_height="match_parent"
-            android:onClick="onButtonSixClick"
-            android:text="6"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
+                android:onClick="onButtonEqualClick"
+                android:text="="
+                android:textSize="50dp"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        >
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-
-            android:onClick="onButtonSevenClick"
-            android:text="7"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-
-            android:onClick="onButtonEightClick"
-            android:layout_height="match_parent"
-            android:text="8"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-
-            android:layout_height="match_parent"
-            android:onClick="onButtonNineClick"
-            android:text="9"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        >
-
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-
-            android:onClick="onButtonZeroClick"
-            android:text="0"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-
-            android:onClick="onButtonClearCClick"
-            android:layout_height="match_parent"
-            android:text="C"
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-
-            android:layout_height="match_parent"
-            android:onClick="onButtonEqualClick"
-            android:text="="
-            android:textSize="50dp"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
-
-
-
-
 </LinearLayout>
